# rules_verus

./: BUILD.bazel  MODULE.bazel  README.md
verus/: BUILD.bazel  defs.bzl  extensions.bzl  toolchain.bzl
verus/private/: BUILD.bazel  repo.bzl  verus.bzl
